# LinearAlgebra

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  main.cpp  mainSparse.cpp
Algorithms/: CMakeLists.txt
Algorithms/Sorting/: CMakeLists.txt  ParallelSorting.h  parallel_sorting
Algorithms/Sorting/tests/: CMakeLists.txt  test_parallel_sort.cpp
LinearAlgebra/: CMakeLists.txt  LinearAlgebra.cpp  LinearAlgebra.h  Matrix.cpp  Matrix.h  Partitioning.h  Vector.cpp  Vector.h
LinearAlgebra/LinearSolver/: CMakeLists.txt  GMRes.cpp  GMRes.h  GaussianElimination.cpp  GaussianElimination.h  LinearSolver.h
LinearAlgebra/LinearSolver/tests/: CMakeLists.txt  test_gaussian_elimination.cpp  test_gmres.cpp  timing_gaussian_elimination_cycle.cpp  timing_gmres.cpp
LinearAlgebra/Matrix/: AbstractMatrix.h  CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix_BlockRowPartition.cpp  Matrix_BlockRowPartition.h  Matrix_CycleRowPartition.cpp  Matrix_CycleRowPartition.h  SparseMatrix_BlockRowPartition.cpp  SparseMatrix_BlockRowPartition.h
LinearAlgebra/Matrix/tests/: CMakeLists.txt  test_parallel_matrix.cpp  test_parallel_matrix_blockRowPartition.cpp  test_parallel_matrix_cycleRowPartition.cpp  test_parallel_sparseMatrix_blockRowPartition.cpp
LinearAlgebra/Vector/: AbstractVector.h  CMakeLists.txt  Vector.cpp  Vector_BlockPartition.cpp  Vector_BlockPartition.h  Vector_CyclePartition.cpp  Vector_CyclePartition.h
LinearAlgebra/Vector/tests/: CMakeLists.txt  test_parallel_vector_blockPartition.cpp  test_parallel_vector_cyclePartition.cpp
LinearAlgebra/tests/: CMakeLists.txt  test_parallel_matrix.cpp  test_parallel_vector.cpp
Nucleus/: CMakeLists.txt  Nucleus.cpp  Nucleus.h
Parallel/: BlockPartition1D.cpp  BlockPartition1D.h  CMakeLists.txt  CyclePartition1D.cpp  CyclePartition1D.h  Parallel.cpp  Parallel.h  Partition1D.h
Parallel/tests/: CMakeLists.txt  test_parallel_blockPartition.cpp  test_parallel_cyclePartition.cpp
cmake/Modules/: Nucleus.cmake
